# PicsConvert

./: .gitignore  README.md  config.json  main.py  pyproject.toml
picsconvert/: __main__.py
picsconvert/utils/: input_handler.py
src/convert/: compression_blacklist.json  compression_tracker.py  format_convert.py  img_convert.py  performance_config.json  performance_control.py  performance_control_streamlit.py
src/ebookconvert/: __main__.py
src/picsconvert/: __init__.py  __main__.py
src/picsconvert/convert/: __init__.py  img_convert.py  performance_control.py
src/picsconvert/utils/: __init__.py  archive_image_analyzer.py  input_handler.py
src/utils/: monitor_decorator.py
tests/: vips_test.py
